fix page intro spacing

--- a/css/layout/_post.scss
+++ b/css/layout/_post.scss
@@ -118,6 +118,7 @@
 	}
 
 	&.about-intro {
-		height:85vh;
+		height: calc(85vh - 60px);
+		top: 60px;
 	}
 }
